@@ -1,13 +1,13 @@
 Manifest-Version: 1.0
 Bundle-ManifestVersion: 2
-Bundle-Name: wicketsourceopener
+Bundle-Name: %Bundle-Name
 Bundle-SymbolicName: com.github.jennybrown8.wicketsourceopener;singleton:=true
 Bundle-Version: 7.4.0.1
 Bundle-Activator: com.github.jennybrown8.wicketsourceopener.Activator
 Require-Bundle: org.eclipse.ui,
  org.eclipse.core.runtime,
  org.eclipse.core.resources,
- org.eclipse.ui.ide;bundle-version="3.7.0"
+ org.eclipse.ui.ide;bundle-version="3.12.0"
 Bundle-ActivationPolicy: lazy
 Bundle-RequiredExecutionEnvironment: JavaSE-1.8
 Import-Package: org.eclipse.debug.core.sourcelookup.containers,
@@ -16,3 +16,7 @@ Import-Package: org.eclipse.debug.core.sourcelookup.containers,
  org.eclipse.jdt.ui,
  org.eclipse.jface.text,
  org.eclipse.ui.texteditor
+Export-Package: com.github.jennybrown8.wicketsourceopener,
+ com.github.jennybrown8.wicketsourceopener.preferences,
+ com.github.jennybrown8.wicketsourceopener.socket,
+ com.github.jennybrown8.wicketsourceopener.views
