@@ -1,0 +1,5 @@
+#Properties file for com.github.jennybrown8.wicketsourceopener
+category.name = Wicket Source Opener
+view.name = Wicket Source Opener
+page.name = Wicket Source Opener
+Bundle-Name = wicketsourceopener
