@@ -9,7 +9,8 @@ bin.includes = plugin.xml,\
                contexts.xml,\
                bin/net/,\
                build.properties,\
-               .classpath
+               .classpath,\
+               OSGI-INF/l10n/bundle.properties
 src.includes = icons/,\
                contexts.xml
 jre.compilation.profile = JavaSE-1.8
